Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127700

tst_popup.qml::test_popupWithOverlayInLoader() crash

XMLWordPrintable

      Run the test: tst_popup.qml::test_popupWithOverlayInLoader(), adding "popupType: Popup.Window".
      The test crashes when deactivating the loader. The global position is trying to be calculated despite the parent window being set to null in deactivation.

      Test output:

      PASS   : tst_controls::Universal::Popup::initTestCase()
      Received signal 11 (SIGSEGV), code 1, for address 0x0000000000000008
               Popup::test_popupWithOverlayInLoader function time: 27ms, total time: 30ms 

        For Gerrit Dashboard: QTBUG-127700
        # Subject Branch Project Status CR V

            edcooke Ed Cooke (Inactive)
            edcooke Ed Cooke (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes