Fix crash in Popup when parent window is null

The test tst_popup.qml::test_popupWithOverlayInLoader() crashes when
deactivating the loader. The problem arises when attempting to calculate
the global position of the popup window, when its parent window is null.
This patch adds a check for a null parent window beforehand.

Fixes: QTBUG-127700
Change-Id: Id9a53edfbbc6e3aeff47c93a77427ea6a5604ed8
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>
(cherry picked from commit 5ca53716ac9ded14d69514f546cc906f1b2699ac)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>